@@ -72,7 +72,6 @@ import jenkins.YesNoMaybe;
 import jenkins.model.Jenkins;
 import jenkins.plugins.DetachedPluginsUtil;
 import jenkins.security.UpdateSiteWarningsMonitor;
-import jenkins.util.AntClassLoader;
 import jenkins.util.URLClassLoader2;
 import org.apache.commons.lang.StringUtils;
 import org.apache.commons.logging.LogFactory;
@@ -174,7 +173,7 @@ public class PluginWrapper implements Comparable<PluginWrapper>, ModelObject {
     private final List<Dependency> optionalDependencies;
 
     public List<String> getDependencyErrors() {
-        return Collections.unmodifiableList(new ArrayList<>(dependencyErrors.keySet()));
+        return List.copyOf(dependencyErrors.keySet());
     }
 
     @Restricted(NoExternalUse.class) // Jelly use
@@ -222,7 +221,7 @@ public class PluginWrapper implements Comparable<PluginWrapper>, ModelObject {
      * The core can depend on a plugin if it is bundled. Sometimes it's the only thing that
      * depends on the plugin e.g. UI support library bundle plugin.
      */
-    private static Set<String> CORE_ONLY_DEPENDANT = Collections.singleton("jenkins-core");
+    private static Set<String> CORE_ONLY_DEPENDANT = Set.of("jenkins-core");
 
     /**
      * Set the list of components that depend on this plugin.
@@ -414,12 +413,7 @@ public class PluginWrapper implements Comparable<PluginWrapper>, ModelObject {
      */
     @Restricted(Beta.class)
     public void injectJarsToClasspath(File... jars) throws Exception {
-        if (classLoader instanceof AntClassLoader) {
-            for (File f : jars) {
-                LOGGER.log(Level.CONFIG, () -> "Inserting " + f + " into " + shortName + " plugin's classpath");
-                ((AntClassLoader) classLoader).addPathComponent(f);
-            }
-        } else if (classLoader instanceof URLClassLoader2) {
+        if (classLoader instanceof URLClassLoader2) {
             for (File f : jars) {
                 LOGGER.log(Level.CONFIG, () -> "Inserting " + f + " into " + shortName + " plugin's classpath");
                 ((URLClassLoader2) classLoader).addURL(f.toURI().toURL());
@@ -1356,6 +1350,7 @@ public class PluginWrapper implements Comparable<PluginWrapper>, ModelObject {
 
         jenkins.checkPermission(Jenkins.ADMINISTER);
         Files.deleteIfExists(Util.fileToPath(archive));
+        Files.deleteIfExists(Util.fileToPath(disableFile));
 
         // Redo who depends on who.
         jenkins.getPluginManager().resolveDependentPlugins();
