@@ -55,6 +55,8 @@ import hudson.util.Secret;
 import java.io.File;
 import java.io.IOException;
 import java.io.OutputStream;
+import java.nio.charset.Charset;
+import java.nio.file.Files;
 import java.util.Collection;
 import java.util.Iterator;
 import java.util.LinkedHashMap;
@@ -78,7 +80,6 @@ import jenkins.model.queue.ItemDeletion;
 import jenkins.security.NotReallyRoleSensitiveCallable;
 import jenkins.util.SystemProperties;
 import jenkins.util.xml.XMLUtils;
-import org.apache.commons.io.FileUtils;
 import org.apache.tools.ant.Project;
 import org.apache.tools.ant.taskdefs.Copy;
 import org.apache.tools.ant.types.FileSet;
@@ -294,7 +295,7 @@ public abstract class AbstractItem extends Actionable implements Item, HttpDelet
             if (newName.equals(name)) {
                 return FormValidation.warning(Messages.AbstractItem_NewNameUnchanged());
             }
-            Jenkins.get().getProjectNamingStrategy().checkName(newName);
+            Jenkins.get().getProjectNamingStrategy().checkName(getParent().getFullName(), newName);
             checkIfNameIsUsed(newName);
             checkRename(newName);
         } catch (Failure e) {
@@ -478,7 +479,7 @@ public abstract class AbstractItem extends Actionable implements Item, HttpDelet
     @Exported
     public final String getFullName() {
         String n = getParent().getFullName();
-        if (n.length() == 0)   return getName();
+        if (n.isEmpty())   return getName();
         else                return n + '/' + getName();
     }
 
@@ -486,7 +487,7 @@ public abstract class AbstractItem extends Actionable implements Item, HttpDelet
     @Exported
     public final String getFullDisplayName() {
         String n = getParent().getFullDisplayName();
-        if (n.length() == 0)   return getDisplayName();
+        if (n.isEmpty())   return getDisplayName();
         else                return n + " » " + getDisplayName();
     }
 
@@ -850,9 +851,9 @@ public abstract class AbstractItem extends Actionable implements Item, HttpDelet
             IOUtils.copy(configFile.getFile(), os);
         } else {
             String encoding = configFile.sniffEncoding();
-            String xml = FileUtils.readFileToString(configFile.getFile(), encoding);
+            String xml = Files.readString(Util.fileToPath(configFile.getFile()), Charset.forName(encoding));
             Matcher matcher = SECRET_PATTERN.matcher(xml);
-            StringBuffer cleanXml = new StringBuffer();
+            StringBuilder cleanXml = new StringBuilder();
             while (matcher.find()) {
                 if (Secret.decrypt(matcher.group(1)) != null) {
                     matcher.appendReplacement(cleanXml, ">********<");
@@ -892,7 +893,7 @@ public abstract class AbstractItem extends Actionable implements Item, HttpDelet
             }
 
             // try to reflect the changes by reloading
-            Object o = new XmlFile(Items.XSTREAM, out.getTemporaryFile()).unmarshalNullingOut(this);
+            Object o = new XmlFile(Items.XSTREAM, out.getTemporaryPath().toFile()).unmarshalNullingOut(this);
             if (o != this) {
                 // ensure that we've got the same job type. extending this code to support updating
                 // to different job type requires destroying & creating a new job type
@@ -939,8 +940,6 @@ public abstract class AbstractItem extends Actionable implements Item, HttpDelet
             }
         });
         Jenkins.get().rebuildDependencyGraphAsync();
-
-        SaveableListener.fireOnChange(this, getConfigFile());
     }
 
 
