@@ -27,7 +27,7 @@ package hudson.triggers;
 
 import static java.util.logging.Level.WARNING;
 
-import antlr.ANTLRException;
+import edu.umd.cs.findbugs.annotations.CheckForNull;
 import edu.umd.cs.findbugs.annotations.NonNull;
 import edu.umd.cs.findbugs.annotations.SuppressFBWarnings;
 import hudson.Extension;
@@ -57,6 +57,7 @@ import java.io.IOException;
 import java.io.OutputStream;
 import java.io.PrintStream;
 import java.nio.charset.Charset;
+import java.nio.file.Files;
 import java.text.DateFormat;
 import java.util.ArrayList;
 import java.util.Arrays;
@@ -79,7 +80,6 @@ import jenkins.scm.SCMDecisionHandler;
 import jenkins.triggers.SCMTriggerItem;
 import jenkins.util.SystemProperties;
 import net.sf.json.JSONObject;
-import org.apache.commons.io.FileUtils;
 import org.apache.commons.jelly.XMLOutput;
 import org.apache.commons.lang.StringUtils;
 import org.jenkinsci.Symbol;
@@ -109,7 +109,7 @@ public class SCMTrigger extends Trigger<Item> {
     private boolean ignorePostCommitHooks;
 
     @DataBoundConstructor
-    public SCMTrigger(String scmpoll_spec) throws ANTLRException {
+    public SCMTrigger(String scmpoll_spec) {
         super(scmpoll_spec);
     }
 
@@ -124,7 +124,7 @@ public class SCMTrigger extends Trigger<Item> {
      * @deprecated since 2.21
      */
     @Deprecated
-    public SCMTrigger(String scmpoll_spec, boolean ignorePostCommitHooks) throws ANTLRException {
+    public SCMTrigger(String scmpoll_spec, boolean ignorePostCommitHooks) {
         super(scmpoll_spec);
         this.ignorePostCommitHooks = ignorePostCommitHooks;
     }
@@ -205,7 +205,7 @@ public class SCMTrigger extends Trigger<Item> {
             return Collections.emptyList();
         }
 
-        return Collections.singleton(new SCMAction());
+        return Set.of(new SCMAction());
     }
 
     /**
@@ -535,7 +535,7 @@ public class SCMTrigger extends Trigger<Item> {
         }
 
         public String getLog() throws IOException {
-            return Util.loadFile(getLogFile());
+            return Util.loadFile(getLogFile(), Charset.defaultCharset());
         }
 
         /**
@@ -609,7 +609,7 @@ public class SCMTrigger extends Trigger<Item> {
             try {
                 // to make sure that the log file contains up-to-date text,
                 // don't do buffering.
-                StreamTaskListener listener = new StreamTaskListener(getLogFile());
+                StreamTaskListener listener = new StreamTaskListener(getLogFile(), Charset.defaultCharset());
 
                 try {
                     PrintStream logger = listener.getLogger();
@@ -644,7 +644,7 @@ public class SCMTrigger extends Trigger<Item> {
             // note that job().poll(listener) should also check this
             SCMDecisionHandler veto = SCMDecisionHandler.firstShouldPollVeto(job);
             if (veto != null) {
-                try (StreamTaskListener listener = new StreamTaskListener(getLogFile())) {
+                try (StreamTaskListener listener = new StreamTaskListener(getLogFile(), Charset.defaultCharset())) {
                     listener.getLogger().println(
                             "Skipping polling on " + DateFormat.getDateTimeInstance().format(new Date())
                                     + " due to veto from " + veto);
@@ -711,13 +711,14 @@ public class SCMTrigger extends Trigger<Item> {
          * Only used while ths cause is in the queue.
          * Once attached to the build, we'll move this into a file to reduce the memory footprint.
          */
+        @CheckForNull
         private String pollingLog;
 
         private transient Run run;
 
         public SCMTriggerCause(File logFile) throws IOException {
             // TODO: charset of this log file?
-            this(FileUtils.readFileToString(logFile));
+            this(Files.readString(Util.fileToPath(logFile), Charset.defaultCharset()));
         }
 
         public SCMTriggerCause(String pollingLog) {
@@ -743,7 +744,10 @@ public class SCMTrigger extends Trigger<Item> {
             this.run = build;
             try {
                 BuildAction a = new BuildAction(build);
-                FileUtils.writeStringToFile(a.getPollingLogFile(), pollingLog);
+                // pollingLog can be null when rebuilding a job that was initially triggered by polling.
+                if (pollingLog != null) {
+                    Files.writeString(Util.fileToPath(a.getPollingLogFile()), pollingLog, Charset.defaultCharset());
+                }
                 build.replaceAction(a);
             } catch (IOException e) {
                 LOGGER.log(WARNING, "Failed to persist the polling log", e);
