@@ -42,7 +42,6 @@ import static java.util.logging.Level.WARNING;
 import static javax.servlet.http.HttpServletResponse.SC_BAD_REQUEST;
 import static javax.servlet.http.HttpServletResponse.SC_NOT_FOUND;
 
-import antlr.ANTLRException;
 import com.google.common.annotations.VisibleForTesting;
 import com.google.inject.Inject;
 import com.google.inject.Injector;
@@ -115,6 +114,7 @@ import hudson.model.Label;
 import hudson.model.ListView;
 import hudson.model.LoadBalancer;
 import hudson.model.LoadStatistics;
+import hudson.model.ManageJenkinsAction;
 import hudson.model.ManagementLink;
 import hudson.model.Messages;
 import hudson.model.ModifiableViewGroup;
@@ -239,6 +239,7 @@ import java.util.TreeMap;
 import java.util.TreeSet;
 import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.ConcurrentHashMap;
+import java.util.concurrent.ConcurrentMap;
 import java.util.concurrent.CopyOnWriteArrayList;
 import java.util.concurrent.CountDownLatch;
 import java.util.concurrent.ExecutionException;
@@ -263,6 +264,7 @@ import jenkins.AgentProtocol;
 import jenkins.ExtensionComponentSet;
 import jenkins.ExtensionRefreshException;
 import jenkins.InitReactorRunner;
+import jenkins.agents.CloudSet;
 import jenkins.diagnostics.URICheckEncodingMonitor;
 import jenkins.install.InstallState;
 import jenkins.install.SetupWizard;
@@ -527,7 +529,7 @@ public class Jenkins extends AbstractCIBase implements DirectlyModifiableTopLeve
     /**
      * {@link Computer}s in this Jenkins system. Read-only.
      */
-    protected final transient Map<Node, Computer> computers = new CopyOnWriteMap.Hash<>();
+    protected final transient ConcurrentMap<Node, Computer> computers = new ConcurrentHashMap<>();
 
     /**
      * Active {@link Cloud}s.
@@ -645,6 +647,7 @@ public class Jenkins extends AbstractCIBase implements DirectlyModifiableTopLeve
      * @since 2.16
      */
     @CheckForNull
+    @GuardedBy("this")
     private List<String> disabledAgentProtocols;
     /**
      * @deprecated Just a temporary buffer for XSTream migration code from JENKINS-39465, do not use
@@ -659,6 +662,7 @@ public class Jenkins extends AbstractCIBase implements DirectlyModifiableTopLeve
      * @since 2.16
      */
     @CheckForNull
+    @GuardedBy("this")
     private List<String> enabledAgentProtocols;
     /**
      * @deprecated Just a temporary buffer for XSTream migration code from JENKINS-39465, do not use
@@ -674,6 +678,7 @@ public class Jenkins extends AbstractCIBase implements DirectlyModifiableTopLeve
      * @see #setAgentProtocols(Set)
      * @see #getAgentProtocols()
      */
+    @GuardedBy("this")
     private transient Set<String> agentProtocols;
 
     /**
@@ -1061,16 +1066,18 @@ public class Jenkins extends AbstractCIBase implements DirectlyModifiableTopLeve
         if (SLAVE_AGENT_PORT_ENFORCE) {
             slaveAgentPort = getSlaveAgentPortInitialValue(slaveAgentPort);
         }
-        if (disabledAgentProtocols == null && _disabledAgentProtocols != null) {
-            disabledAgentProtocols = Arrays.asList(_disabledAgentProtocols);
-            _disabledAgentProtocols = null;
+        synchronized (this) {
+            if (disabledAgentProtocols == null && _disabledAgentProtocols != null) {
+                disabledAgentProtocols = Arrays.asList(_disabledAgentProtocols);
+                _disabledAgentProtocols = null;
+            }
+            if (enabledAgentProtocols == null && _enabledAgentProtocols != null) {
+                enabledAgentProtocols = Arrays.asList(_enabledAgentProtocols);
+                _enabledAgentProtocols = null;
+            }
+            // Invalidate the protocols cache after the reload
+            agentProtocols = null;
         }
-        if (enabledAgentProtocols == null && _enabledAgentProtocols != null) {
-            enabledAgentProtocols = Arrays.asList(_enabledAgentProtocols);
-            _enabledAgentProtocols = null;
-        }
-        // Invalidate the protocols cache after the reload
-        agentProtocols = null;
 
         // no longer persisted
         installStateName = null;
@@ -1125,7 +1132,7 @@ public class Jenkins extends AbstractCIBase implements DirectlyModifiableTopLeve
     public void setInstallState(@NonNull InstallState newState) {
         String prior = installStateName;
         installStateName = newState.name();
-        LOGGER.log(Main.isDevelopmentMode ? Level.INFO : Level.FINE, "Install state transitioning from: {0} to : {1}", new Object[] { prior, installStateName });
+        LOGGER.log(Main.isDevelopmentMode ? Level.INFO : Level.FINE, "Install state transitioning from: {0} to: {1}", new Object[] { prior, installStateName });
         if (!installStateName.equals(prior)) {
             getSetupWizard().onInstallStateUpdate(newState);
             newState.initializeState();
@@ -1242,9 +1249,9 @@ public class Jenkins extends AbstractCIBase implements DirectlyModifiableTopLeve
      * @return the enabled agent protocols.
      * @since 2.16
      */
-    public Set<String> getAgentProtocols() {
+    @NonNull
+    public synchronized Set<String> getAgentProtocols() {
         if (agentProtocols == null) {
-            // idempotent, so don't care if we do this concurrently, should all get same result
             Set<String> result = new TreeSet<>();
             Set<String> disabled = new TreeSet<>();
             for (String p : Util.fixNull(disabledAgentProtocols)) {
@@ -1261,7 +1268,14 @@ public class Jenkins extends AbstractCIBase implements DirectlyModifiableTopLeve
                     result.add(name);
                 }
             }
-            agentProtocols = result;
+            /*
+             * An empty result is almost never valid, but it can happen due to JENKINS-70206. Since we know the result
+             * is likely incorrect, at least decline to cache it so that a correct result can be computed later on
+             * rather than continuing to deliver the incorrect result indefinitely.
+             */
+            if (!result.isEmpty()) {
+                agentProtocols = result;
+            }
             return result;
         }
         return agentProtocols;
@@ -1273,7 +1287,7 @@ public class Jenkins extends AbstractCIBase implements DirectlyModifiableTopLeve
      * @param protocols the enabled agent protocols.
      * @since 2.16
      */
-    public void setAgentProtocols(Set<String> protocols) {
+    public synchronized void setAgentProtocols(@NonNull Set<String> protocols) {
         Set<String> disabled = new TreeSet<>();
         Set<String> enabled = new TreeSet<>();
         for (AgentProtocol p : AgentProtocol.all()) {
@@ -1486,7 +1500,7 @@ public class Jenkins extends AbstractCIBase implements DirectlyModifiableTopLeve
      *
      * <p>
      * This form of identifier is weak in that it can be impersonated by others. See
-     * https://github.com/jenkinsci/instance-identity-plugin for more modern form of instance ID
+     * <a href="https://github.com/jenkinsci/instance-identity-plugin">the Instance Identity plugin</a> for more modern form of instance ID
      * that can be challenged and verified.
      *
      * @since 1.498
@@ -1560,6 +1574,14 @@ public class Jenkins extends AbstractCIBase implements DirectlyModifiableTopLeve
     @Deprecated
     public ComputerSet getComputer() {
         return new ComputerSet();
+    }
+
+    /**
+     * Only there to bind to /cloud/ URL. Otherwise /cloud/new gets resolved to getCloud("new") by stapler which is not what we want.
+     */
+    @Restricted(DoNotUse.class)
+    public CloudSet getCloud() {
+        return new CloudSet();
     }
 
     /**
@@ -2068,7 +2090,7 @@ public class Jenkins extends AbstractCIBase implements DirectlyModifiableTopLeve
                 // For the record, this method creates temporary labels but there is a periodic task
                 // calling "trimLabels" to remove unused labels running every 5 minutes.
                 labels.putIfAbsent(expr, Label.parseExpression(expr));
-            } catch (ANTLRException e) {
+            } catch (IllegalArgumentException e) {
                 // laxly accept it as a single label atom for backward compatibility
                 return getLabelAtom(expr);
             }
@@ -2176,7 +2198,7 @@ public class Jenkins extends AbstractCIBase implements DirectlyModifiableTopLeve
     }
 
     @Override
-    protected Map<Node, Computer> getComputerMap() {
+    protected ConcurrentMap<Node, Computer> getComputerMap() {
         return computers;
     }
 
@@ -2724,7 +2746,16 @@ public class Jenkins extends AbstractCIBase implements DirectlyModifiableTopLeve
                 ? securityRealm.getUserIdStrategy() // don't trigger rekey on Jenkins load
                 : this.securityRealm.getUserIdStrategy();
         this.securityRealm = securityRealm;
-        // reset the filters and proxies for the new SecurityRealm
+        resetFilter(securityRealm, oldUserIdStrategy);
+        saveQuietly();
+    }
+
+    /**
+     * Reset the filters and proxies for the new {@link SecurityRealm}.
+     * @param securityRealm The new security realm
+     * @param oldUserIdStrategy The old user id strategy if there was one. Can trigger a rekey if the new user id strategy is different.
+     */
+    private void resetFilter(@CheckForNull SecurityRealm securityRealm, @CheckForNull IdStrategy oldUserIdStrategy) {
         try {
             HudsonFilter filter = HudsonFilter.get(servletContext);
             if (filter == null) {
@@ -2736,14 +2767,13 @@ public class Jenkins extends AbstractCIBase implements DirectlyModifiableTopLeve
                 filter.reset(securityRealm);
                 LOGGER.fine("Security is now fully set up");
             }
-            if (!oldUserIdStrategy.equals(this.securityRealm.getUserIdStrategy())) {
+            if (oldUserIdStrategy != null && this.securityRealm != null && !oldUserIdStrategy.equals(this.securityRealm.getUserIdStrategy())) {
                 User.rekey();
             }
         } catch (ServletException e) {
             // for binary compatibility, this method cannot throw a checked exception
             throw new RuntimeException("Failed to configure filter", e) {};
         }
-        saveQuietly();
     }
 
     /**
@@ -3116,12 +3146,14 @@ public class Jenkins extends AbstractCIBase implements DirectlyModifiableTopLeve
         return User.get(name, User.ALLOW_USER_CREATION_VIA_URL && hasPermission(ADMINISTER));
     }
 
-    public synchronized TopLevelItem createProject(TopLevelItemDescriptor type, String name) throws IOException {
+    @NonNull
+    public synchronized TopLevelItem createProject(@NonNull TopLevelItemDescriptor type, @NonNull String name) throws IOException {
         return createProject(type, name, true);
     }
 
+    @NonNull
     @Override
-    public synchronized TopLevelItem createProject(TopLevelItemDescriptor type, String name, boolean notify) throws IOException {
+    public synchronized TopLevelItem createProject(@NonNull TopLevelItemDescriptor type, @NonNull String name, boolean notify) throws IOException {
         return itemGroupMixIn.createProject(type, name, notify);
     }
 
@@ -3152,8 +3184,9 @@ public class Jenkins extends AbstractCIBase implements DirectlyModifiableTopLeve
      * @throws IllegalArgumentException
      *      if the project of the given name already exists.
      */
-    public synchronized <T extends TopLevelItem> T createProject(Class<T> type, String name) throws IOException {
-        return type.cast(createProject((TopLevelItemDescriptor) getDescriptor(type), name));
+    @NonNull
+    public synchronized <T extends TopLevelItem> T createProject(@NonNull Class<T> type, @NonNull String name) throws IOException {
+        return type.cast(createProject((TopLevelItemDescriptor) getDescriptorOrDie(type), name));
     }
 
     /**
@@ -3299,6 +3332,7 @@ public class Jenkins extends AbstractCIBase implements DirectlyModifiableTopLeve
         try {
             checkRawBuildsDir(buildsDir);
             setBuildsAndWorkspacesDir();
+            resetFilter(securityRealm, null);
         } catch (InvalidBuildsDir invalidBuildsDir) {
             throw new IOException(invalidBuildsDir);
         }
@@ -3480,9 +3514,6 @@ public class Jenkins extends AbstractCIBase implements DirectlyModifiableTopLeve
                             setSecurityRealm(SecurityRealm.NO_AUTHENTICATION);
                         else
                             setSecurityRealm(new LegacySecurityRealm());
-                    } else {
-                        // force the set to proxy
-                        setSecurityRealm(securityRealm);
                     }
                 }
 
@@ -4161,7 +4192,7 @@ public class Jenkins extends AbstractCIBase implements DirectlyModifiableTopLeve
             try {
                 r.put(e.getKey(), e.getValue().get(endTime - System.currentTimeMillis(), TimeUnit.MILLISECONDS));
             } catch (Exception x) {
-                r.put(e.getKey(), Collections.singletonMap("Failed to retrieve thread dump", Functions.printThrowable(x)));
+                r.put(e.getKey(), Map.of("Failed to retrieve thread dump", Functions.printThrowable(x)));
             }
         }
         return Collections.unmodifiableSortedMap(new TreeMap<>(r));
@@ -4207,7 +4238,7 @@ public class Jenkins extends AbstractCIBase implements DirectlyModifiableTopLeve
      *      if the given name is not good
      */
     public static void checkGoodName(String name) throws Failure {
-        if (name == null || name.length() == 0)
+        if (name == null || name.isEmpty())
             throw new Failure(Messages.Hudson_NoName());
 
         if (".".equals(name.trim()))
@@ -4376,7 +4407,7 @@ public class Jenkins extends AbstractCIBase implements DirectlyModifiableTopLeve
     @RequirePOST
     public void doDoFingerprintCheck(StaplerRequest req, StaplerResponse rsp) throws IOException, ServletException {
         // Parse the request
-        try (MultipartFormDataParser p = new MultipartFormDataParser(req)) {
+        try (MultipartFormDataParser p = new MultipartFormDataParser(req, 10)) {
             if (isUseCrumbs() && !getCrumbIssuer().validateCrumb(req, p)) {
                 // TODO investigate whether this check can be removed
                 rsp.sendError(HttpServletResponse.SC_FORBIDDEN, "No crumb found");
@@ -4414,7 +4445,7 @@ public class Jenkins extends AbstractCIBase implements DirectlyModifiableTopLeve
         for (MenuItem i : menu.items) {
             if (i.url.equals(request.getContextPath() + "/manage")) {
                 // add "Manage Jenkins" subitems
-                i.subMenu = new ContextMenu().from(this, request, response, "manage");
+                i.subMenu = new ContextMenu().from(ExtensionList.lookupSingleton(ManageJenkinsAction.class), request, response, "index");
             }
         }
         return menu;
@@ -5093,7 +5124,7 @@ public class Jenkins extends AbstractCIBase implements DirectlyModifiableTopLeve
     }
 
     private boolean isAgentJnlpPath(String restOfPath, String prefix) {
-        return restOfPath.matches("/computer/[^/]+/" + prefix + "-agent[.]jnlp");
+        return restOfPath.matches("(/manage)?/computer/[^/]+/" + prefix + "-agent[.]jnlp");
     }
 
     /**
@@ -5543,7 +5574,7 @@ public class Jenkins extends AbstractCIBase implements DirectlyModifiableTopLeve
      *
      * The default value is true.
      *
-     * For detailed documentation: https://docs.microsoft.com/en-us/troubleshoot/windows-client/shell-experience/file-folder-name-whitespace-characters
+     * For detailed documentation: <a href="https://docs.microsoft.com/en-us/troubleshoot/windows-client/shell-experience/file-folder-name-whitespace-characters">Support for Whitespace characters in File and Folder names for Windows</a>
      * @see #checkGoodName(String)
      */
     @Restricted(NoExternalUse.class)
@@ -5677,7 +5708,7 @@ public class Jenkins extends AbstractCIBase implements DirectlyModifiableTopLeve
             new AnonymousAuthenticationToken(
                     "anonymous",
                     "anonymous",
-                    Collections.singleton(new SimpleGrantedAuthority("anonymous")));
+                    Set.of(new SimpleGrantedAuthority("anonymous")));
 
     /**
      * @deprecated use {@link #ANONYMOUS2}
