@@ -146,7 +146,7 @@ public class FunctionsTest {
             when(j.getItemGroup()).thenReturn(j);
             createMockAncestors(req, createAncestor(view, "."), createAncestor(j, "../.."));
             TopLevelItem i = createMockItem(parent, "job/i/");
-            when(view.getItems()).thenReturn(Collections.singletonList(i));
+            when(view.getItems()).thenReturn(List.of(i));
             String result = Functions.getRelativeLinkTo(i);
             assertEquals("job/i/", result);
         }
@@ -212,7 +212,7 @@ public class FunctionsTest {
             when(parent.getItemGroup()).thenReturn(parent);
             createMockAncestors(req, createAncestor(j, "../../.."), createAncestor(parent, "../.."), createAncestor(view, "."));
             TopLevelItem i = createMockItem(parent, "job/i/", "parent/job/i/");
-            when(view.getItems()).thenReturn(Collections.singletonList(i));
+            when(view.getItems()).thenReturn(List.of(i));
             String result = Functions.getRelativeLinkTo(i);
             assertEquals("job/i/", result);
         }
@@ -399,6 +399,13 @@ public class FunctionsTest {
         String result = Functions.extractPluginNameFromIconSrc("symbol-padlock plugin-design-library");
 
         assertThat(result, is(equalTo("design-library")));
+    }
+
+    @Test
+    public void extractPluginNameFromIconSrcWhichContainsPluginWordInThePluginName() {
+        String result = Functions.extractPluginNameFromIconSrc("symbol-padlock plugin-design-library-plugin");
+
+        assertThat(result, is(equalTo("design-library-plugin")));
     }
 
     @Issue("JDK-6507809")
@@ -675,5 +682,23 @@ public class FunctionsTest {
     @Test
     public void tryGetIcon_shouldReturnNullForUnknown() throws Exception {
         assertThat(Functions.tryGetIcon("icon-nosuchicon"), is(nullValue()));
+    }
+
+    @Test
+    public void guessIcon() throws Exception {
+        Jenkins.RESOURCE_PATH = "/static/12345678";
+        assertEquals("/jenkins/static/12345678/images/48x48/green.gif", Functions.guessIcon("jenkins/images/48x48/green.gif", "/jenkins"));
+        assertEquals("/jenkins/static/12345678/images/48x48/green.gif", Functions.guessIcon("/jenkins/images/48x48/green.gif", "/jenkins"));
+        assertEquals("/static/12345678/images/48x48/green.gif", Functions.guessIcon("images/48x48/green.gif", ""));
+        assertEquals("/jenkins/static/12345678/images/48x48/green.gif", Functions.guessIcon("images/48x48/green.gif", "/jenkins"));
+        assertEquals("/jenkins/static/12345678/images/48x48/green.gif", Functions.guessIcon("/images/48x48/green.gif", "/jenkins"));
+        assertEquals("/images/static/12345678/images/48x48/green.gif", Functions.guessIcon("/images/48x48/green.gif", "/images"));
+        assertEquals("/static/12345678/plugin/myartifactId/images/48x48/green.gif", Functions.guessIcon("/plugin/myartifactId/images/48x48/green.gif", ""));
+        assertEquals("/jenkins/static/12345678/plugin/myartifactId/images/48x48/green.gif", Functions.guessIcon("/plugin/myartifactId/images/48x48/green.gif", "/jenkins"));
+        assertEquals("/jenkins/static/12345678/plugin/myartifactId/images/48x48/green.gif", Functions.guessIcon("/jenkins/plugin/myartifactId/images/48x48/green.gif", "/jenkins"));
+        assertEquals("/plugin/static/12345678/plugin/myartifactId/images/48x48/green.gif", Functions.guessIcon("/plugin/myartifactId/images/48x48/green.gif", "/plugin"));
+        assertEquals("/plugin/static/12345678/plugin/myartifactId/images/48x48/green.gif", Functions.guessIcon("/plugin/plugin/myartifactId/images/48x48/green.gif", "/plugin"));
+        assertEquals("http://acme.com/icon.svg", Functions.guessIcon("http://acme.com/icon.svg", "/jenkins"));
+        assertEquals("https://acme.com/icon.svg", Functions.guessIcon("https://acme.com/icon.svg", "/jenkins"));
     }
 }
