@@ -25,9 +25,11 @@
 package hudson.model;
 
 import static org.junit.Assert.assertEquals;
+import static org.junit.Assert.assertFalse;
 import static org.junit.Assert.assertNotEquals;
 import static org.junit.Assert.assertNotNull;
 import static org.junit.Assert.assertNull;
+import static org.junit.Assert.assertTrue;
 
 import hudson.PluginWrapper;
 import hudson.model.UpdateSite.Data;
@@ -35,9 +37,14 @@ import hudson.util.FormValidation;
 import hudson.util.PersistedList;
 import java.io.File;
 import java.io.IOException;
+import java.io.InputStream;
 import java.net.URISyntaxException;
 import java.net.URL;
 import java.nio.charset.StandardCharsets;
+import java.nio.file.Files;
+import java.nio.file.Path;
+import java.nio.file.Paths;
+import java.nio.file.StandardCopyOption;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collections;
@@ -45,12 +52,14 @@ import java.util.HashSet;
 import java.util.List;
 import java.util.jar.Attributes;
 import java.util.jar.Manifest;
+import java.util.zip.ZipEntry;
+import java.util.zip.ZipInputStream;
 import javax.servlet.http.HttpServletRequest;
 import javax.servlet.http.HttpServletResponse;
 import jenkins.model.Jenkins;
 import jenkins.security.UpdateSiteWarningsConfiguration;
 import jenkins.security.UpdateSiteWarningsMonitor;
-import org.apache.commons.io.FileUtils;
+import org.apache.commons.io.FilenameUtils;
 import org.eclipse.jetty.server.Request;
 import org.eclipse.jetty.server.Server;
 import org.eclipse.jetty.server.ServerConnector;
@@ -69,12 +78,31 @@ public class UpdateSiteTest {
     private Server server;
     private URL baseUrl;
 
-    private String getResource(String resourceName) throws IOException {
+    private static String getResource(String resourceName) throws IOException {
         try {
             URL url = UpdateSiteTest.class.getResource(resourceName);
-            return url != null ? FileUtils.readFileToString(new File(url.toURI())) : null;
+            if (url == null) {
+                url = extract(resourceName);
+            }
+            return url != null ? Files.readString(Paths.get(url.toURI()), StandardCharsets.UTF_8) : null;
         } catch (URISyntaxException e) {
             return null;
+        }
+    }
+
+    public static URL extract(String resourceName) throws IOException {
+        URL url = UpdateSiteTest.class.getResource(resourceName + ".zip");
+        if (url == null) {
+            return null;
+        }
+        try (InputStream is = url.openStream(); ZipInputStream zis = new ZipInputStream(is)) {
+            ZipEntry zipEntry = zis.getNextEntry();
+            assertEquals(resourceName, zipEntry.getName());
+            Path result = Files.createTempFile(FilenameUtils.getBaseName(resourceName), FilenameUtils.getExtension(resourceName));
+            result.toFile().deleteOnExit();
+            Files.copy(zis, result, StandardCopyOption.REPLACE_EXISTING);
+            assertNull(zis.getNextEntry());
+            return result.toUri().toURL();
         }
     }
 
@@ -176,6 +204,36 @@ public class UpdateSiteTest {
         List<UpdateSite.Plugin> available = site.getAvailables();
         assertEquals("ALowTitle", available.get(0).getDisplayName());
         assertEquals("TheHighTitle", available.get(1).getDisplayName());
+    }
+
+    @Test public void deprecations() throws Exception {
+        UpdateSite site = getUpdateSite("/plugins/deprecations-update-center.json");
+
+        // present in plugins section of update-center.json, not deprecated
+        UpdateSite.Plugin credentials = site.getPlugin("credentials");
+        assertNotNull(credentials);
+        assertFalse(credentials.isDeprecated());
+        assertNull(credentials.getDeprecation());
+        assertNull(site.getData().getDeprecations().get("credentials"));
+
+        // present in plugins section of update-center.json, deprecated via label and top-level list
+        UpdateSite.Plugin iconShim = site.getPlugin("icon-shim");
+        assertNotNull(iconShim);
+        assertTrue(iconShim.isDeprecated());
+        assertEquals("https://www.jenkins.io/deprecations/icon-shim/", iconShim.getDeprecation().url);
+        assertEquals("https://www.jenkins.io/deprecations/icon-shim/", site.getData().getDeprecations().get("icon-shim").url);
+
+        // present in plugins section of update-center.json, deprecated via label only
+        UpdateSite.Plugin tokenMacro = site.getPlugin("token-macro");
+        assertNotNull(tokenMacro);
+        assertTrue(tokenMacro.isDeprecated());
+        assertEquals("https://wiki.jenkins-ci.org/display/JENKINS/Token+Macro+Plugin", tokenMacro.getDeprecation().url);
+        assertEquals("https://wiki.jenkins-ci.org/display/JENKINS/Token+Macro+Plugin", site.getData().getDeprecations().get("token-macro").url);
+
+        // not in plugins section of update-center.json, deprecated via top-level list
+        UpdateSite.Plugin variant = site.getPlugin("variant");
+        assertNull(variant);
+        assertEquals("https://www.jenkins.io/deprecations/variant/", site.getData().getDeprecations().get("variant").url);
     }
 
     private UpdateSite getUpdateSite(String path) throws Exception {
