@@ -26,7 +26,7 @@ package jenkins.cli;
 
 import static java.util.Arrays.asList;
 import static org.hamcrest.MatcherAssert.assertThat;
-import static org.hamcrest.core.IsEqual.equalTo;
+import static org.hamcrest.Matchers.equalTo;
 
 import hudson.cli.CLICommand;
 import hudson.cli.CLICommandInvoker;
@@ -35,17 +35,21 @@ import hudson.model.FreeStyleProject;
 import hudson.model.Item;
 import hudson.model.Result;
 import java.io.IOException;
-import java.util.Collections;
 import java.util.List;
 import java.util.concurrent.TimeUnit;
 import jenkins.model.Jenkins;
+import org.junit.ClassRule;
 import org.junit.Rule;
 import org.junit.Test;
+import org.jvnet.hudson.test.BuildWatcher;
 import org.jvnet.hudson.test.JenkinsRule;
 import org.jvnet.hudson.test.MockAuthorizationStrategy;
 import org.jvnet.hudson.test.SleepBuilder;
 
 public class StopBuildsCommandTest {
+
+    @ClassRule
+    public static BuildWatcher buildWatcher = new BuildWatcher();
 
     @Rule
     public JenkinsRule j = new JenkinsRule();
@@ -59,7 +63,7 @@ public class StopBuildsCommandTest {
         final FreeStyleProject project = createLongRunningProject(TEST_JOB_NAME);
         FreeStyleBuild build = project.scheduleBuild2(0).waitForStart();
         j.waitForMessage("Sleeping", build);
-        final String stdout = runWith(Collections.singletonList(TEST_JOB_NAME)).stdout();
+        final String stdout = runWith(List.of(TEST_JOB_NAME)).stdout();
 
         assertThat(stdout, equalTo("Build '#1' stopped for job 'jobName'" + LN));
 
@@ -72,7 +76,7 @@ public class StopBuildsCommandTest {
         project.getBuildersList().add(new SleepBuilder(TimeUnit.SECONDS.toMillis(1)));
         j.buildAndAssertSuccess(project);
 
-        final String out = runWith(Collections.singletonList(TEST_JOB_NAME)).stdout();
+        final String out = runWith(List.of(TEST_JOB_NAME)).stdout();
 
         assertThat(out, equalTo("No builds stopped" + LN));
     }
@@ -87,7 +91,7 @@ public class StopBuildsCommandTest {
         FreeStyleBuild b2 = project.scheduleBuild2(0).waitForStart();
         j.waitForMessage("Sleeping", b2);
 
-        final String stdout = runWith(Collections.singletonList(TEST_JOB_NAME)).stdout();
+        final String stdout = runWith(List.of(TEST_JOB_NAME)).stdout();
 
         assertThat(stdout, equalTo("Build '#2' stopped for job 'jobName'" + LN +
                 "Build '#1' stopped for job 'jobName'" + LN));
@@ -100,14 +104,14 @@ public class StopBuildsCommandTest {
         final String testFolderName = "folder";
         j.createFolder(testFolderName);
 
-        final String stderr = runWith(Collections.singletonList(testFolderName)).stderr();
+        final String stderr = runWith(List.of(testFolderName)).stderr();
 
         assertThat(stderr, equalTo(LN + "ERROR: Job not found: 'folder'" + LN));
     }
 
     @Test
     public void shouldDoNothingIfJobNotFound() throws Exception {
-        final String stderr = runWith(Collections.singletonList(TEST_JOB_NAME)).stderr();
+        final String stderr = runWith(List.of(TEST_JOB_NAME)).stderr();
 
         assertThat(stderr, equalTo(LN + "ERROR: Job not found: 'jobName'" + LN));
     }
@@ -136,7 +140,7 @@ public class StopBuildsCommandTest {
         FreeStyleBuild build = project.scheduleBuild2(0).waitForStart();
         j.waitForMessage("Sleeping", build);
 
-        final String stdout = runWith(Collections.singletonList(TEST_JOB_NAME)).stdout();
+        final String stdout = runWith(List.of(TEST_JOB_NAME)).stdout();
 
         assertThat(stdout,
                 equalTo("Exception occurred while trying to stop build '#1' for job 'jobName'. " +
@@ -174,6 +178,28 @@ public class StopBuildsCommandTest {
 
         b1.doStop();
         b2.doStop();
+        j.assertBuildStatus(Result.ABORTED, j.waitForCompletion(b1));
+        j.assertBuildStatus(Result.ABORTED, j.waitForCompletion(b2));
+    }
+
+    @Test
+    public void shouldStopEarlierBuildsEvenIfLatestComplete() throws Exception {
+        final FreeStyleProject project = createLongRunningProject(TEST_JOB_NAME);
+        project.setConcurrentBuild(true);
+        j.jenkins.setNumExecutors(3);
+
+        FreeStyleBuild b1 = project.scheduleBuild2(0).waitForStart();
+        j.waitForMessage("Sleeping", b1);
+        FreeStyleBuild b2 = project.scheduleBuild2(0).waitForStart();
+        j.waitForMessage("Sleeping", b2);
+
+        project.getBuildersList().clear();
+        FreeStyleBuild b3 = j.buildAndAssertSuccess(project);
+
+        final String stdout = runWith(List.of(TEST_JOB_NAME)).stdout();
+
+        assertThat(stdout, equalTo("Build '#2' stopped for job 'jobName'" + LN +
+                "Build '#1' stopped for job 'jobName'" + LN));
         j.assertBuildStatus(Result.ABORTED, j.waitForCompletion(b1));
         j.assertBuildStatus(Result.ABORTED, j.waitForCompletion(b2));
     }
