@@ -8,20 +8,20 @@ import static org.junit.Assert.assertFalse;
 import static org.junit.Assert.assertNull;
 import static org.junit.Assert.assertTrue;
 
-import com.gargoylesoftware.htmlunit.html.HtmlAnchor;
-import com.gargoylesoftware.htmlunit.html.HtmlElementUtil;
-import com.gargoylesoftware.htmlunit.html.HtmlForm;
-import com.gargoylesoftware.htmlunit.html.HtmlFormUtil;
-import com.gargoylesoftware.htmlunit.html.HtmlInput;
-import com.gargoylesoftware.htmlunit.html.HtmlPage;
 import hudson.model.FreeStyleProject;
 import hudson.model.Label;
-import java.io.File;
 import java.io.IOException;
 import java.net.URL;
 import java.nio.charset.StandardCharsets;
+import java.nio.file.Files;
+import java.nio.file.Path;
 import java.util.concurrent.atomic.AtomicReference;
-import org.apache.commons.io.FileUtils;
+import org.htmlunit.html.HtmlAnchor;
+import org.htmlunit.html.HtmlElementUtil;
+import org.htmlunit.html.HtmlForm;
+import org.htmlunit.html.HtmlFormUtil;
+import org.htmlunit.html.HtmlInput;
+import org.htmlunit.html.HtmlPage;
 import org.junit.Rule;
 import org.junit.Test;
 import org.jvnet.hudson.test.Issue;
@@ -58,7 +58,7 @@ public class JenkinsLocationConfigurationTest {
     public void localhostWarning() throws Exception {
         HtmlPage p = j.createWebClient().goTo("configure");
         HtmlInput url = p.getFormByName("config").getInputByName("_.url");
-        url.setValueAttribute("http://localhost:1234/");
+        url.setValue("http://localhost:1234/");
         assertThat(p.getDocumentElement().getTextContent(), containsString("instead of localhost"));
     }
 
@@ -77,8 +77,8 @@ public class JenkinsLocationConfigurationTest {
         // no impact on the url in memory
         assertNull(JenkinsLocationConfiguration.getOrDie().getUrl());
 
-        File configFile = new File(j.jenkins.getRootDir(), "jenkins.model.JenkinsLocationConfiguration.xml");
-        String configFileContent = FileUtils.readFileToString(configFile, StandardCharsets.UTF_8);
+        Path configFile = j.jenkins.getRootDir().toPath().resolve("jenkins.model.JenkinsLocationConfiguration.xml");
+        String configFileContent = Files.readString(configFile, StandardCharsets.UTF_8);
         assertThat(configFileContent, containsString("JenkinsLocationConfiguration"));
         assertThat(configFileContent, not(containsString("javascript:alert(123);//")));
     }
@@ -103,8 +103,8 @@ public class JenkinsLocationConfigurationTest {
             // the method ensures there is an trailing slash
             assertEquals(expectedUrl + "/", JenkinsLocationConfiguration.getOrDie().getUrl());
 
-            File configFile = new File(j.jenkins.getRootDir(), "jenkins.model.JenkinsLocationConfiguration.xml");
-            String configFileContent = FileUtils.readFileToString(configFile, StandardCharsets.UTF_8);
+            Path configFile = j.jenkins.getRootDir().toPath().resolve("jenkins.model.JenkinsLocationConfiguration.xml");
+            String configFileContent = Files.readString(configFile, StandardCharsets.UTF_8);
             assertThat(configFileContent, containsString("JenkinsLocationConfiguration"));
             assertThat(configFileContent, containsString(expectedUrl));
         }
@@ -127,8 +127,9 @@ public class JenkinsLocationConfigurationTest {
 
     @Test
     @Issue("SECURITY-1471")
-    public void cannotInjectJavaScriptUsingRootUrl_inNewViewLinkAction() throws Exception {
+    public void cannotInjectJavaScriptUsingRootUrl_inNewViewLink() throws Exception {
         JenkinsRule.WebClient wc = j.createWebClient();
+        j.createFreeStyleProject();
 
         settingRootURL("javascript:alert(123);//");
 
@@ -189,7 +190,7 @@ public class JenkinsLocationConfigurationTest {
         HtmlPage configurePage = j.createWebClient().goTo("configure");
         HtmlForm configForm = configurePage.getFormByName("config");
         HtmlInput url = configForm.getInputByName("_.url");
-        url.setValueAttribute(desiredRootUrl);
+        url.setValue(desiredRootUrl);
         HtmlFormUtil.submit(configForm);
     }
 }
